Integrate local features with arij layout: payments, stories, routes, Layout nav
Co-authored-by: Cursor <cursoragent@cursor.com>